[FIX] Read more button visibility

--- a/app/assets/stylesheets/briarcliff/_box.scss
+++ b/app/assets/stylesheets/briarcliff/_box.scss
@@ -103,10 +103,6 @@
   color: $g4;
 }
 
-.box:hover .read-more {
-  color: $g3;
-}
-
 .box-container {
   position: relative;
 }
